Add a check to verify mkdocs builds (#362)
Adds a check to the github action that verifies mkdocs builds with no errors or warnings.

Signed-off-by: Joey Vagedes <joeyvagedes@microsoft.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,6 +123,10 @@ jobs:
         if: success() || failure()
         run: pydocstyle ${{ env.package-src }}
       
+      - name: Run mkdocs build
+        if: success() || failure()
+        run: mkdocs build --strict
+      
       - name: Run basic dev tests
         if: success() || failure()
         run: python BasicDevTests.py
