--- a/.github/workflows/doc-release.yml
+++ b/.github/workflows/doc-release.yml
@@ -9,7 +9,6 @@ on:
   release:
     types: [published]
 
-
 jobs:
   build:
     name: Build and Upload Site Artifact
@@ -40,7 +39,7 @@ jobs:
       - name: Upload Github Pages Site Artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          name: 'github-pages'
+          name: "github-pages"
           path: "site/"
           
   deploy:
@@ -59,4 +58,4 @@ jobs:
       uses: actions/deploy-pages@v1
       with:
         token: ${{ github.token }}
-        artifact_name: 'github-pages'
+        artifact_name: "github-pages"
