Update dependabot.yml (#401)
Provide dependabot with the location of all pip requirement files.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,11 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
+  - package-ecosystem: "pip"
+    directory: "/integration_test/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pip"
+    directory: "/docs/user/"
+    schedule:
+      interval: "daily"
