--- a/.github/workflows/UnitTestRunner.yml
+++ b/.github/workflows/UnitTestRunner.yml
@@ -39,10 +39,7 @@ jobs:
         pip install -e .
     
     - name: Run Unit Tests
-      run: coverage run -m pytest
-
-    - name: Format Coverage results
-      run: coverage xml
+      run: pytest --cov-report xml
 
     - name: Upload coverage to codecov
       uses: codecov/codecov-action@v3
