--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,9 @@
 {
   "python.testing.unittestArgs": [
-    "-v",
-    "-s",
-    "${workspaceRoot}/edk2toolext/tests",
-    "-p",
-    "test_*.py"
+    "edk2toolext/tests"
   ],
-  "python.testing.pytestEnabled": false,
-  "python.testing.unittestEnabled": true,
+  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": false,
   "python.linting.flake8Enabled": true,
   "python.linting.enabled": true,
   "python.linting.pydocstyleEnabled": true
