--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
-  "python.testing.unittestArgs": [
+  "python.testing.pytestEnabled": true,
+  "python.testing.pytestArgs": [
     "edk2toolext/tests"
   ],
-  "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
   "python.linting.flake8Enabled": true,
   "python.linting.enabled": true,
-  "python.linting.pydocstyleEnabled": true
+  "python.linting.pydocstyleEnabled": true,
 }
