--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 python_files = "test_*.py"
-addopts = --cov=edk2toolext --numprocesses=auto --dist=load
+addopts = --cov=edk2toolext --numprocesses=auto --dist=loadscope
