Add `${workspaceFolder}` to the pytest test path
Originally, the pytest test path prepended the workspace root, however
this was accidentally removed in a previous commit. This commit adds
back in the workspace root, but now uses workspaceFolder as
workspaceRoot was deprecated.

Signed-off-by: Joey Vagedes <joeyvagedes@microsoft.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "python.testing.pytestEnabled": true,
   "python.testing.pytestArgs": [
-    "edk2toolext/tests"
+    "${workspaceFolder}/edk2toolext/tests"
   ],
   "python.testing.unittestEnabled": false,
   "python.linting.flake8Enabled": true,
