Update to project to use black for formatting
Updates the necessary files to use black as the default formatter for
the project. This includes updating vscode settings to recommend two
extensions and then enables autoformatting on save, using those
extensions.

Also updates the CI to run black on the project and fail if there are
any changes that need to be formatted. Additionally updates the
developing documentation to include instructions on how to use black.

Signed-off-by: Joey Vagedes <joeyvagedes@microsoft.com>

--- a/.github/workflows/CIRunner.yml
+++ b/.github/workflows/CIRunner.yml
@@ -54,9 +54,9 @@ jobs:
         npm install -g markdownlint-cli@0.32.2
         npm install -g cspell@5.20.0
     
-    - name: Run flake8
+    - name: Run black Format Checker
       if: success() || failure()
-      run: flake8 ${{ inputs.package-src }}
+      run: black ${{ inputs.package-src }} --check --verbose --diff --color
     
     - name: Run markdownlint
       if: success() || failure()
