ruff: add flake8-comprehensions
Adds flake8-comprehensions, which provides rules that result in less
confusing list/set/dict comprehensions.

Signed-off-by: Joey Vagedes <joeyvagedes@microsoft.com>

--- a/ruff.toml
+++ b/ruff.toml
@@ -4,6 +4,7 @@ select = [
     "D",  # pydocstyle
     "I",  # isort
     "COM",  # flake8-commas
+    "C4",  # flake8-comprehensions
 ]
 
 line-length = 120
