ruff: add flake8-no-pep420
Adds flake8-no-pep420 which requires that all namespace packages contain
a __init__.py file.

Signed-off-by: Joey Vagedes <joeyvagedes@microsoft.com>

--- a/ruff.toml
+++ b/ruff.toml
@@ -5,6 +5,7 @@ select = [
     "I",  # isort
     "COM",  # flake8-commas
     "C4",  # flake8-comprehensions
+    "INP",  # flake8-no-pep420
 ]
 
 line-length = 120
