--- a/ruff.toml
+++ b/ruff.toml
@@ -6,7 +6,8 @@ select = [
     "COM",  # flake8-commas
     "C4",  # flake8-comprehensions
     "INP",  # flake8-no-pep420
-    "Q"
+    "Q",  # flake8-quotes
+    "RSE",  # flake8-raise
 ]
 
 line-length = 120
