ruff: add flake8-simplify
Adds flake8-simplify linter that will simplify your code where possible.

Signed-off-by: Joey Vagedes <joeyvagedes@microsoft.com>

--- a/ruff.toml
+++ b/ruff.toml
@@ -8,6 +8,7 @@ select = [
     "INP",  # flake8-no-pep420
     "Q",  # flake8-quotes
     "RSE",  # flake8-raise
+    "SIM",  # flake8-simplify
 ]
 
 line-length = 120
