--- a/ruff.toml
+++ b/ruff.toml
@@ -9,6 +9,7 @@ select = [
     "Q",  # flake8-quotes
     "RSE",  # flake8-raise
     "SIM",  # flake8-simplify
+    "ERA",  # eradicate
 ]
 
 line-length = 120
