ruff: add auto-formatting
updates extensions and settings to reccomend installing the ruff
extensions and then setting up the workspace to auto-format files
when saved.

Signed-off-by: Joey Vagedes <joeyvagedes@microsoft.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,10 @@
     "${workspaceFolder}/edk2toolext/tests"
   ],
   "python.testing.unittestEnabled": false,
-  "python.linting.flake8Enabled": true,
-  "python.linting.enabled": true,
-  "python.linting.pydocstyleEnabled": true,
+  "[python]": {
+    "editor.defaultFormatter": null,
+    "editor.codeActionsOnSave": {
+      "source.fixAll": true,
+    }
+  }
 }
