--- a/.github/workflows/CIRunner.yml
+++ b/.github/workflows/CIRunner.yml
@@ -54,9 +54,9 @@ jobs:
         npm install -g markdownlint-cli@0.32.2
         npm install -g cspell@5.20.0
     
-    - name: Run flake8
+    - name: Run ruff
       if: success() || failure()
-      run: flake8 ${{ inputs.package-src }}
+      run: ruff check ${{ inputs.package-src }}
     
     - name: Run markdownlint
       if: success() || failure()
