--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ GitPython == 3.1.31
 pyyaml == 6.0.0
 cryptography == 40.0.1
 openpyxl == 3.1.2
+XlsxWriter == 3.0.9
 pywin32 == 305; sys_platform == 'win32'
