--- a/.github/workflows/CIRunner.yml
+++ b/.github/workflows/CIRunner.yml
@@ -36,12 +36,11 @@ jobs:
       with:
         python-version: ${{ inputs.python-version }}
         cache: 'pip'
-    - name: LS
-      run: ls
     - name: Install pip Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install --upgrade -r requirements.txt
+        pip install --upgrade -r requirements.publisher.txt
         pip install --upgrade -r docs/user/requirements.txt
         pip install -e .
     
