--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,7 @@ pefile == 2023.2.7
 semantic_version == 2.10.0
 GitPython == 3.1.31
 pyyaml == 6.0.0
-cryptography == 40.0.2
+cryptography == 40.0.1
+openpyxl == 3.1.2
+XlsxWriter == 3.0.9
+pywin32 == 306; sys_platform == 'win32'
