relocate integration and unit tests
Renames integration_test folder to tests.integration
Renames tests folder to tests.unit
Relocates unit tests out of the edk2toolext package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "python.testing.pytestEnabled": true,
   "python.testing.pytestArgs": [
-    "${workspaceFolder}/edk2toolext/tests"
+    "${workspaceFolder}/tests.unit"
   ],
   "python.testing.unittestEnabled": false,
   "python.linting.flake8Enabled": true,
