Update continuous integration steps
Updates CI yaml steps (azure pipelines and github action) to download
pip requirements via the pyproject.toml rather then a requirements file.

Removes all requirements files.

--- a/.github/workflows/doc-release.yml
+++ b/.github/workflows/doc-release.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade -r docs/user/requirements.txt
+          pip install --upgrade -e .[docs]
       
       - name: Build Documentation
         run: |
