--- a/.github/workflows/CIRunner.yml
+++ b/.github/workflows/CIRunner.yml
@@ -40,9 +40,7 @@ jobs:
     - name: Install pip Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install --upgrade -r requirements.txt
-        pip install --upgrade -r docs/user/requirements.txt
-        pip install -e .
+        pip install --upgrade -e .[dev,docs]
     
     - name: Set up Node ${{ inputs.node-version }}
       uses: actions/setup-node@v3
