--- a/.github/workflows/UnitTestRunner.yml
+++ b/.github/workflows/UnitTestRunner.yml
@@ -35,8 +35,7 @@ jobs:
     - name: Install pip Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install --upgrade -r requirements.txt
-        pip install -e .
+        pip install --upgrade -e .[dev]
     
     - name: Run Unit Tests
       run: coverage run -m pytest
