--- a/azure-pipelines/templates/basic-setup-steps.yml
+++ b/azure-pipelines/templates/basic-setup-steps.yml
@@ -18,7 +18,7 @@ steps:
     versionSpec: '3.10.x'
     architecture: 'x64'
 
-- script: pip install --upgrade -r requirements.txt
+- script: pip install --upgrade -e .[dev]
   displayName: 'Install requirements'
 
 - script: pip install -e .
