test.integration: update directory
Updates all places that reference integration_test/* to reference
test.integration/

--- a/tests.integration/azure-pipelines/windows-robot-integration-test.yml
+++ b/tests.integration/azure-pipelines/windows-robot-integration-test.yml
@@ -72,7 +72,7 @@ jobs:
 
   - script: python -m robot.run -v TEST_OUTPUT_BASE:$(Build.BinariesDirectory) -v TOOL_CHAIN_TAG:$(ToolChain) -d report --xunit xunittestresults.xml --include $(Tag) -L TRACE .
     displayName: 'Run Robot Tests'
-    workingDirectory: "integration_test"
+    workingDirectory: "test.integration"
     condition: not(and(eq(variables.PythonVersion, '3.9'), contains(variables.Image, 'ubuntu')))  
     # Above conditional is a temp workaround for known ubuntu python 3.9 Tar file bug
     # https://bugzilla.tianocore.org/show_bug.cgi?id=3891
@@ -82,7 +82,7 @@ jobs:
     displayName: "Copy logs"
     inputs:
       targetFolder: '$(Build.ArtifactStagingDirectory)'
-      SourceFolder: 'integration_test/report'
+      SourceFolder: 'test.integration/report'
       contents: |
         log.html
         output.xml
@@ -105,6 +105,6 @@ jobs:
   - task: PublishTestResults@2
     inputs:
       testResultsFiles: xunittestresults.xml
-      searchFolder: 'integration_test/report'
+      searchFolder: 'test.integration/report'
     condition: succeededOrFailed()
     displayName: 'Publish Test Results'
