edk2_initialize: add edk2_initialize
Add the edk2_initialize invocable, which replaces edk2_setup and
edk2_ci_setup. stuart_init is able to initialize both repositories and
submodules.

Merges edk2_setup and edk2_ci_setup tests. Updates documentation.

Integration instructions:
* import from edk2toolext.invocables.edk2_initialize rather than
  .edk2_setup or .edk2_ci_setup inside the configuration file
* import Submodule and/or Repository instead of RequiredSubmodule
* Where the parent class is specified, switch from SetupSettingsManager
  or CiSetupSettingsManager to InitializeSettingsManager
* Use get_required_repositories and get_required_submodules instead of
  GetDependencies and GetRequiredSubmodules respectively
* Use Submodule instead of RequiredSubmodule and Repository instead of
  a dictionary.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,10 +68,9 @@ openssl = [
 ]
 
 [project.scripts]
-stuart_setup = "edk2toolext.invocables.edk2_setup:main"
+stuart_init = "edk2toolext.invocables.edk2_initialize:main"
 stuart_update = "edk2toolext.invocables.edk2_update:main"
 stuart_build = "edk2toolext.invocables.edk2_platform_build:main"
-stuart_ci_setup = "edk2toolext.invocables.edk2_ci_setup:main"
 stuart_pr_eval = "edk2toolext.invocables.edk2_pr_eval:main"
 stuart_ci_build = "edk2toolext.invocables.edk2_ci_build:main"
 omnicache = "edk2toolext.omnicache:main"
