--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dev = [
     "coverage == 7.2.5",
     "robotframework == 6.0.2",
     "regex == 2023.5.5",
+    "pre-commit == 3.3.2",
 ]
 publish = [
     "setuptools == 67.8.0",
