ruff: add rules W, I, PIE
W: Pycodestyle warnings as ruff failures
I: Requires import statements to be properly sorted
PIE: miscellaneous checks revolving around removing unecessary code

Review the detailed descriptions of each check here:
https://beta.ruff.rs/docs/rules/

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,8 +92,11 @@ include = ["edk2toolext/*"]
 src = ["edk2toolext"]
 select = [
     "E", # Pycodestyle errors
+    "W", # Pycodestyle warnings
     "F", # PyFlakes
     "D", # pydocstyle
+    "I", # isort
+    "PIE", # flake8 - PIE
 ]
 line-length = 120
 
