ruff: require function annotations
Adds the rule ANN which requires function annotations. See
https://beta.ruff.rs/docs/rules/#flake8-annotations-ann for more
information.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,7 @@ select = [
     "D", # pydocstyle
     "I", # isort
     "PIE", # flake8 - PIE
+    "ANN", # function annotations
 ]
 line-length = 120
 
