--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,9 +104,13 @@ select = [
     "ANN", # function annotations
 ]
 line-length = 120
+ignore = ["ANN101"]
 
 [tool.ruff.pydocstyle]
 convention = "google"
+
+[tool.ruff.flake8-annotations]
+allow-star-arg-any = true
 
 [tool.pytest.ini_options]
 testpaths = [
