--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,7 @@ stuart_ci_setup = "edk2toolext.invocables.edk2_ci_setup:main"
 stuart_pr_eval = "edk2toolext.invocables.edk2_pr_eval:main"
 stuart_ci_build = "edk2toolext.invocables.edk2_ci_build:main"
 stuart_parse = "edk2toolext.invocables.edk2_parse:main"
-stuart_report = "edk2toolext.report_generator:main"
+stuart_report = "edk2toolext.edk2_report:main"
 omnicache = "edk2toolext.omnicache:main"
 nuget-publish = "edk2toolext.nuget_publishing:go"
 sig_db_tool = "edk2toolext.uefi.sig_db_tool:main"
