Add CodeQL helper functions
Adds a new file that contains functions are intended to ease repo
integration with CodeQL, ensure consistent command-line usage across
repos, and define standard scopes that other plugins and tools can
depend on for CodeQL operations.

Signed-off-by: Michael Kubacki <michael.kubacki@microsoft.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,6 +85,7 @@ nav:
     - Self Describing Environment: features/sde.md
     - Settings Manager: features/settings_manager.md
     - Logging: features/logging.md
+    - CodeQL: features/codeql.md
     - WSL: features/using_linux.md
   - API Reference:
     - ... | flat | api/**/*.md
