pyproject.toml: Fix edk2_capsule_tool path
Should be `edk2toolext.capsule.capsule_tool:main` instead of
`dek2toolext.capsule.capsule_tool:main`.

Signed-off-by: Michael Kubacki <michael.kubacki@microsoft.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,7 @@ omnicache = "edk2toolext.omnicache:main"
 nuget-publish = "edk2toolext.nuget_publishing:go"
 sig_db_tool = "edk2toolext.uefi.sig_db_tool:main"
 firmware_policy_tool = "edk2toolext.windows.policy.firmware_policy_tool:main"
-edk2_capsule_tool = "dek2toolext.capsule.capsule_tool:main"
+edk2_capsule_tool = "edk2toolext.capsule.capsule_tool:main"
 versioninfo_tool = "edk2toolext.versioninfo.versioninfo_tool:main"
 validate_image_tool = "edk2toolext.image_validation:main"
 secureboot_audit = "edk2toolext.windows.secureboot.secureboot_audit:main"
