ruff 0.1.3 integration changes
Updates the ruff command from --format to --output-format to support
integrating ruff 0.1.3. This change is due to changes made for the
0.1.0 release.

--- a/.github/workflows/CIRunner.yml
+++ b/.github/workflows/CIRunner.yml
@@ -54,7 +54,7 @@ jobs:
     
     - name: Run ruff
       if: success() || failure()
-      run: ruff check ${{ inputs.package-src }} --format=github
+      run: ruff check ${{ inputs.package-src }} --output-format=github
     
     - name: Run markdownlint
       if: success() || failure()
