--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = {file = "readme.md", content-type = "text/markdown"}
 license = {file = "LICENSE"}
 requires-python = ">=3.10"
 dependencies = [
-    "edk2-pytool-library>=0.16.1",
+    "edk2-pytool-library>=0.19.4",
     "pyyaml>=6.0.0",
     "pefile>=2023.2.7",
     "semantic_version>=2.10.0",
@@ -76,6 +76,8 @@ stuart_build = "edk2toolext.invocables.edk2_platform_build:main"
 stuart_ci_setup = "edk2toolext.invocables.edk2_ci_setup:main"
 stuart_pr_eval = "edk2toolext.invocables.edk2_pr_eval:main"
 stuart_ci_build = "edk2toolext.invocables.edk2_ci_build:main"
+stuart_parse = "edk2toolext.invocables.edk2_parse:main"
+stuart_report = "edk2toolext.edk2_report:main"
 omnicache = "edk2toolext.omnicache:main"
 nuget-publish = "edk2toolext.nuget_publishing:go"
 sig_db_tool = "edk2toolext.uefi.sig_db_tool:main"
