ruff: require function annotations (#609)
Adds the rule ANN which requires function annotations. See https://beta.ruff.rs/docs/rules/#flake8-annotations-ann for more information.

Only adds type annotations to function headers so this will have no effect on the codebase itself.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,11 +101,16 @@ select = [
     "D", # pydocstyle
     "I", # isort
     "PIE", # flake8 - PIE
+    "ANN", # function annotations
 ]
 line-length = 120
+ignore = ["ANN101"]
 
 [tool.ruff.pydocstyle]
 convention = "google"
+
+[tool.ruff.flake8-annotations]
+allow-star-arg-any = true
 
 [tool.pytest.ini_options]
 testpaths = [
