Update pytool dependency

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
   "[python]": {
     "editor.defaultFormatter": null,
     "editor.codeActionsOnSave": {
-      "source.fixAll.ruff": true
+      "source.fixAll.ruff": "explicit"
     }
   }
 }
