--- a/azure-pipelines/templates/markdown-lint-steps.yml
+++ b/azure-pipelines/templates/markdown-lint-steps.yml
@@ -11,7 +11,7 @@ parameters:
   none: ''
 
 steps:
-- script: npm install -g markdownlint-cli
+- script: npm install -g markdownlint-cli@0.39.0
   displayName: "Install markdown linter"
 
 - script: markdownlint "**/*.md"
