--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ docs = [
     "mkdocs-gen-files==0.5.0",
     "mkdocs-exclude==1.0.2",
     "mkdocs-awesome-pages-plugin==2.9.3",
+    "griffe==0.49.0",
 ]
 openssl = [
     "pyopenssl",
