pyproject.toml: Updated ruff deprecated settings
Addresses these deprecated messages from ruff:

```
warning: The top-level linter settings are deprecated in favour of
their counterparts in the `lint` section. Please update the
following options in `pyproject.toml`:

  - 'ignore' -> 'lint.ignore'
  - 'select' -> 'lint.select'
  - 'flake8-annotations' -> 'lint.flake8-annotations'
  - 'pydocstyle' -> 'lint.pydocstyle'
```

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,6 +94,10 @@ include = ["edk2toolext/*"]
 
 [tool.ruff]
 src = ["edk2toolext"]
+line-length = 120
+
+[lint]
+ignore = ["ANN101"]
 select = [
     "E", # Pycodestyle errors
     "W", # Pycodestyle warnings
@@ -103,13 +107,11 @@ select = [
     "PIE", # flake8 - PIE
     "ANN", # function annotations
 ]
-line-length = 120
-ignore = ["ANN101"]
 
-[tool.ruff.pydocstyle]
+[lint.pydocstyle]
 convention = "google"
 
-[tool.ruff.flake8-annotations]
+[lint.flake8-annotations]
 allow-star-arg-any = true
 
 [tool.pytest.ini_options]
