--- a/.github/workflows/UnitTestRunner.yml
+++ b/.github/workflows/UnitTestRunner.yml
@@ -37,6 +37,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install --upgrade -e .[dev]
     
+    - name: Install mono
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y mono-devel
+    
     - name: Run Unit Tests
       run: coverage run -m pytest
 
