--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -29,6 +29,7 @@ body:
       description: "Note: Bug fixes are only supported on these Python versions."
       multiple: true
       options:
+        - Python 3.10
         - Python 3.11
         - Python 3.12
         - Python 3.13
