ruff: Update toml file format and fix new issues
With recent ruff updates, the format of the toml file has changed. This
commit updates the pyproject.toml file to the new format for configuring
ruff, and fixes the new issues that were found.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,8 +96,7 @@ include = ["edk2toolext/*"]
 src = ["edk2toolext"]
 line-length = 120
 
-[lint]
-ignore = ["ANN101"]
+[tool.ruff.lint]
 select = [
     "E", # Pycodestyle errors
     "W", # Pycodestyle warnings
@@ -108,10 +107,10 @@ select = [
     "ANN", # function annotations
 ]
 
-[lint.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
 
-[lint.flake8-annotations]
+[tool.ruff.lint.flake8-annotations]
 allow-star-arg-any = true
 
 [tool.pytest.ini_options]
