edk2toolext: Add patch var store
Adds a script that allows the UEFI variable store in a ROM file to
be patched with variable data specified in an XML file.

Signed-off-by: Michael Kubacki <michael.kubacki@microsoft.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ stuart_parse = "edk2toolext.invocables.edk2_parse:main"
 stuart_report = "edk2toolext.edk2_report:main"
 omnicache = "edk2toolext.omnicache:main"
 nuget-publish = "edk2toolext.nuget_publishing:go"
+patch_var_store_tool = "edk2toolext.uefi.patch_var_store:main"
 sig_db_tool = "edk2toolext.uefi.sig_db_tool:main"
 firmware_policy_tool = "edk2toolext.windows.policy.firmware_policy_tool:main"
 edk2_capsule_tool = "edk2toolext.capsule.capsule_tool:main"
