--- a/.github/workflows/run-ci.yml
+++ b/.github/workflows/run-ci.yml
@@ -33,6 +33,7 @@ jobs:
     uses: ./.github/workflows/UnitTestRunner.yml
     with:
       python-versions: ${{ needs.variables.outputs.python-msv }}
+    secrets: inherit
   
   unit-test:
     needs: [variables,ci]
@@ -40,4 +41,5 @@ jobs:
     uses: ./.github/workflows/UnitTestRunner.yml
     with:
       python-versions: ${{ needs.variables.outputs.python-versions }}
+    secrets: inherit
   
