--- a/.github/workflows/UnitTestRunner.yml
+++ b/.github/workflows/UnitTestRunner.yml
@@ -52,7 +52,8 @@ jobs:
     - name: Upload coverage to codecov
       uses: codecov/codecov-action@v5
       with:
-        verbose: false
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: true
     
     - uses: actions/upload-artifact@v4
       with:
