--- a/.github/workflows/UnitTestRunner.yml
+++ b/.github/workflows/UnitTestRunner.yml
@@ -24,10 +24,10 @@ jobs:
         os: [ubuntu-latest, windows-latest]
     
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
@@ -52,7 +52,8 @@ jobs:
     - name: Upload coverage to codecov
       uses: codecov/codecov-action@v5
       with:
-        verbose: false
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: true
     
     - uses: actions/upload-artifact@v4
       with:
