Add Python 3.14 support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = {file = "readme.md", content-type = "text/markdown"}
 license-files = ["LICENSE"]
 requires-python = ">=3.10"
 dependencies = [
-    "edk2-pytool-library>=0.23.7",
+    "edk2-pytool-library>=0.23.10",
     "pyyaml>=6.0.0",
     "pefile>=2023.2.7",
     "semantic_version>=2.10.0",
@@ -30,7 +30,8 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13"
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14"
 ]
 
 [project.urls]
