--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -33,6 +33,7 @@ body:
         - Python 3.11
         - Python 3.12
         - Python 3.13
+        - Python 3.14
     validations:
       required: true
   - type: textarea
